force-app/main/default/objects/Buy_Sell__c/Buy_Sell__c.object-meta.xml
<CustomObject>
    <label>买入/卖出</label>
    <nameField>
        <displayFormat>BS-{0000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>