force-app/main/default/objects/Buy_Sell__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>操作</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
                <label>买入</label>
            </value>
            <value>
                <fullName>Sell</fullName>
                <label>卖出</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>