force-app/main/default/objects/Buy_Sell__c/fields/Fixed_Capital_del__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Capital_del__c</fullName>
    <label>资产概况</label>
    <referenceTo>Fixed_Capital__c</referenceTo>
    <relationshipLabel>买入/卖出</relationshipLabel>
    <relationshipName>Buy_Sell_del</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>