force-app/main/default/objects/Buy_Sell__c/fields/Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Market_Value__c</fullName>
    <formula>Price__c *  Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>市值</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>