force-app/main/default/objects/Buy_Sell__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>价格</label>
    <precision>14</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>