force-app/main/default/objects/Buy_Sell__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>股票</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>买入/卖出</relationshipLabel>
    <relationshipName>Buy_Sell</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>