force-app/main/default/objects/Buy_Sell__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fixed_Capital_del__c</columns>
    <columns>Stock__c</columns>
    <columns>Actions__c</columns>
    <columns>Price__c</columns>
    <columns>Number__c</columns>
    <columns>Market_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>